--- a/ca09_group3_project_RawCode.Rmd
+++ b/ca09_group3_project_RawCode.Rmd
@@ -67,7 +67,7 @@ $Y = 3.64 - 0.44(Private\ Room) - 0.57(Shared\ Room) - 0.17(T5) - 0.13(T4) + 0.0
 This analysis is very approachable for the average person given the obvious logic behind each of the variables. We can interpret the following factors which influence the average expected price to stay in Vienna for four nights as follows:
  - Private Room: the negative coefficient shows that you should expect to pay less for a private room in a shared accommodation as opposed to a hotel room (which is the baseline). This signifies a negative premium (c. -44%) for having to share the other facilities in an accommodation. This is a dummy variable, i.e. is either one or zero if it is a private room or not.
  - Shared Room: this has a more negative coefficient than the Private Room which signifies that people on average should expect to pay less for a shared room than a private room, which makes sense (e.g. hostel vs hotel)
- - The variables T5, T4, T2, and Innere Stadt are location variables which represent pools of Vienna's 23 neighbourhoods grouped by mean rental price. Innere Stadt is the most expensive area by quite a lot, so is isolated. The higher the number in the other tiers, the less expensive AirBnB rental prices are on average. T3 is the assumed baseline category. It makes sense that neighbourhood should be an important explanatory factor of rental prices, as location is cornerstone of valuation drivers for real estate markets. The neighbourhoods were also better at explaining the variation in the price data than distance from the center of the city, which makes sense as changes in accommodation quality and demand isn't generally constant the further you go from the centre in unplanned cities
+ - The variables T5, T4, T2, and Innere Stadt are location variables which represent pools of Vienna's 23 neighbourhoods grouped by mean rental price. Innere Stadt is the most expensive area by quite a lot, so we isolated it. The higher the number in the other tiers, the less expensive AirBnB rental prices are on average. T3 is the assumed baseline category. It makes sense that neighbourhood should be an important explanatory factor of rental prices, as location is cornerstone of valuation drivers for real estate markets. The neighbourhoods were also better at explaining the variation in the price data than distance from the center of the city, which makes sense as changes in accommodation quality and demand isn't generally constant the further you go from the centre in unplanned cities
   - Rating: this variable denotes the AirBnB rating for the property out of five on the website. This is an obvious factor affecting price of accommodation as demand for higher rated properties should be higher on average than lower rated properties, as previous experiences there are expected to be better on average. This is especially important when travelers sort the accommodation options on the website in terms of rating which is often the case.
   - Accommodates: this coefficient reads that if an accommodation can fit one more person, on average, the rental price for four nights should increase by 9%. The direction of the variable makes sense; however, we would expect this relationship to be convex in general i.e. the difference between the price of an accommodation for two people versus three should be greater than for eleven versus ten, based on logic.
   - Bathrooms: an increase of one in the number of bathrooms should increase the average rental price for four nights by 14% on average, when controlling for the other variables. 
